@@ -1,5 +1,6 @@
 0.9.3+
     improve inotify error messages
+    configure.ac default make options; fix -Wformat-security warning #416
 0.9.3   2014-01-17:
     fix memory leak on draw selection rectangle on desktop #397
     [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
